# AnnotatedTree-CPP

./: .gitignore  CMakeLists.txt  ChunkType.h  LayerInfo.cpp  LayerInfo.h  ParseNodeDrawable.cpp  ParseNodeDrawable.h  ParseNodeSearchable.cpp  ParseTreeDrawable.cpp  ParseTreeDrawable.h  README.md  TreeBankDrawable.cpp  TreeBankDrawable.h  conanfile.py  conanfile.txt
Layer/: EnglishPropbankLayer.h  EnglishSemanticLayer.cpp  EnglishSemanticLayer.h  EnglishWordLayer.h  MetaMorphemeLayer.h  MorphologicalAnalysisLayer.cpp  MorphologicalAnalysisLayer.h  MultiWordLayer.cpp  MultiWordLayer.h  NERLayer.cpp  NERLayer.h  PersianWordLayer.cpp  PersianWordLayer.h  ShallowParseLayer.cpp  ShallowParseLayer.h  SingleWordLayer.cpp  SingleWordLayer.h  SingleWordMultiItemLayer.cpp  SingleWordMultiItemLayer.h  SourceLanguageWordLayer.h  TargetLanguageWordLayer.cpp  TargetLanguageWordLayer.h  TurkishPropbankLayer.cpp  TurkishSemanticLayer.cpp  TurkishSemanticLayer.h  TurkishWordLayer.cpp  WordLayer.cpp
Processor/: NodeDrawableCollector.cpp  NodeDrawableCollector.h  TreeModifier.h  TreeToStringConverter.cpp
Test/: ParseTreeDrawableTest.cpp
include/: AnnotatedSentence.h  AnnotatedWord.h  ArgumentType.h  Frameset.h  FramesetArgument.h  NamedEntityType.h  ParallelTreeBank.h  ParseNode.h  ParseTree.h  SearchDirectionType.h  TreeBank.h  ViewLayerType.h
src/: CMakeLists.txt  LayerInfo.cpp  LayerInfo.h  ParseNodeDrawable.cpp  ParseNodeDrawable.h  ParseNodeSearchable.cpp  ParseNodeSearchable.h  ParseTreeDrawable.cpp  ParseTreeDrawable.h  ParseTreeSearchable.cpp  SearchTree.cpp  SearchTree.h  (+2 more)
(+119 files in other folders)
